--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -136,8 +136,8 @@ jobs:
 
       - name: Summarize warnings
         if:   matrix.conf.run_tests != true
-        env:
-          #max_warnings: ${{ matrix.conf.max_warnings }}
+        #env:
+        #  max_warnings: ${{ matrix.conf.max_warnings }}
         run:  python ./scripts/count-warnings.py -lf build.log
 
   build_msys2_release:
