--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install pylint
         run: |
           sudo apt-get install python3-setuptools
-          sudo pip3 install pylint beautifulsoup4 html5lib
+          sudo pip3 install pylint beautifulsoup4 html5lib jsonpickle
       - name: Run pylint
         run:  ./scripts/verify-python.sh
       - name: Install markdownlint
@@ -63,7 +63,7 @@ jobs:
           echo "::set-output name=today::$(date -I)"
           echo "::set-output name=yesterday::$(date --date=yesterday -I)"
 
-      - uses:  actions/cache@v2
+      - uses:  actions/cache@v2 
         id:    cache-ccache
         with:
           path: ${{ steps.prep-ccache.outputs.dir }}
