--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,48 +24,48 @@ jobs:
             os: ubuntu-20.04
             packages: clang
             build_flags: -Dunit_tests=disabled --native-file=.github/meson/native-clang.ini
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, Ubuntu 20.04
             os: ubuntu-20.04
             build_flags: -Dunit_tests=disabled
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, Ubuntu 18.04
             os: ubuntu-18.04
             build_flags: -Dunit_tests=disabled
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC 7, Ubuntu 18.04
             os: ubuntu-18.04
             packages: g++-7
             build_flags: -Dunit_tests=disabled --native-file=.github/meson/native-gcc-7.ini
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, +tests
             os: ubuntu-20.04
             run_tests: true
-            max_warnings: -1
+            #max_warnings: -1
 
           - name: GCC, +debugger
             os: ubuntu-20.04
             build_flags: -Dunit_tests=disabled -Denable_debugger=normal
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, -dyn-x86
             os: ubuntu-20.04
             build_flags: -Dunit_tests=disabled -Ddynamic_core=dynrec
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, -dyn-x86, +debugger
             os: ubuntu-20.04
             build_flags: -Dunit_tests=disabled -Ddynamic_core=dynrec -Denable_debugger=normal
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, -network
             os: ubuntu-20.04
             build_flags: -Dunit_tests=disabled -Duse_sdl2_net=false -Duse_slirp=false
-            max_warnings: 0
+            #max_warnings: 0
 
           - name: GCC, minimum build
             os: ubuntu-20.04
@@ -80,7 +80,7 @@ jobs:
               -Duse_sdl2_net=false
               -Duse_slirp=false
             min_dependencies: true
-            max_warnings: 0
+            #max_warnings: 0
 
     steps:
       - name: Checkout repository
@@ -142,8 +142,8 @@ jobs:
 
       - name: Summarize warnings
         if:   matrix.conf.run_tests != true
-        env:
-          MAX_WARNINGS: ${{ matrix.conf.max_warnings }}
+        #env:
+        #  max_warnings: ${{ matrix.conf.max_warnings }}
         run:  ./scripts/count-warnings.py -lf build.log
 
 
