--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -27,33 +27,33 @@ jobs:
             toolchain: ""
             arch: i686
             sys: MINGW32
-            max_warnings: 1
+            #max_warnings: 1
           - name: GCC (MinGW) x86_64
             toolchain: ""
             arch: x86_64
             sys: MINGW64
-            max_warnings: 1
+            #max_warnings: 1
           # - name: Clang x86
           #   toolchain: clang-
           #   arch: i686
           #   sys: CLANG32
-          #   max_warnings: 19
+          #   #max_warnings: 19
           - name: Clang x86_64
             toolchain: clang-
             arch: x86_64
             sys: CLANG64
-            max_warnings: 5
+            #max_warnings: 5
           - name: GCC +tests
             toolchain: ""
             arch: x86_64
             sys: MINGW64
             run_tests: true
-            max_warnings: -0
+            #max_warnings: -0
           - name: GCC +debugger
             toolchain: ""
             arch: x86_64
             sys: MINGW64
-            max_warnings: 3
+            #max_warnings: 3
             build_flags: -Denable_debugger=normal
     
     defaults:
@@ -136,8 +136,8 @@ jobs:
 
       - name: Summarize warnings
         if:   matrix.conf.run_tests != true
-        env:
-          MAX_WARNINGS: ${{ matrix.conf.max_warnings }}
+        #env:
+        #  max_warnings: ${{ matrix.conf.max_warnings }}
         run:  python ./scripts/count-warnings.py -lf build.log
 
   build_msys2_release:
