--- a/src/custom/src/meson.build
+++ b/src/custom/src/meson.build
@@ -1,7 +1,15 @@
 libsrc_sources = files([
-  'int8.cpp',
+  'detroit.exe.cpp',
+  'detroit.exe_default_seg.cpp',
+  'detroit.exe_seg000.cpp',
+  'detroit.exe_seg001.cpp',
+  'detroit.exe_seg002.cpp',
+  'detroit.exe_seg003.cpp',
+  'detroit.exe_seg004.cpp',
+  'detroit.exe_seg005.cpp',
+  'detroit.exe_seg006.cpp',
   'init.cpp',
-  '_data.cpp',
+  '_data.cpp'
 ])
 
 libsrc = static_library('src', libsrc_sources,
