tool to read and fix relocs

--- a/src/custom/src/meson.build
+++ b/src/custom/src/meson.build
@@ -1,13 +1,15 @@
 libsrc_sources = files([
-  'detroit.exe.cpp',
-  'detroit.exe_default_seg.cpp',
-  'detroit.exe_seg000.cpp',
-  'detroit.exe_seg001.cpp',
-  'detroit.exe_seg002.cpp',
-  'detroit.exe_seg003.cpp',
-  'detroit.exe_seg004.cpp',
-  'detroit.exe_seg005.cpp',
-  'detroit.exe_seg006.cpp',
+  'f.exe.cpp',
+  'f.exe_default_seg.cpp',
+  'f.exe_seg000.cpp',
+  'f.exe_seg001.cpp',
+  'f.exe_seg004.cpp',
+  'f.exe_seg127c.cpp',
+  'f.exe_seg2623.cpp',
+  'f.exe_seg35ab.cpp',
+  'f.exe_seg37ca.cpp',
+  'f.exe_seg3897.cpp',
+  'f.exe_seg48ae.cpp',
   'init.cpp',
   '_data.cpp'
 ])
