--- a/src/custom/src/meson.build
+++ b/src/custom/src/meson.build
@@ -4,9 +4,9 @@ libsrc_sources = files([
   'f.exe_default_seg.cpp',
   'f.exe_seg000.cpp',
   'f.exe_seg001.cpp',
-  'f.exe_seg003.cpp',
   'f.exe_seg004.cpp',
   'f.exe_seg127c.cpp',
+  'f.exe_seg13dd.cpp',
   'f.exe_seg2623.cpp',
   'f.exe_seg35ab.cpp',
   'f.exe_seg37ca.cpp',
