--- a/src/custom/src/meson.build
+++ b/src/custom/src/meson.build
@@ -1,18 +1,11 @@
 libsrc_sources = files([
   '_data.cpp',
-  'f.exe.cpp',
-  'f.exe_default_seg.cpp',
-  'f.exe_seg000.cpp',
-  'f.exe_seg001.cpp',
-  'f.exe_seg004.cpp',
-  'f.exe_seg127c.cpp',
-  'f.exe_seg13dd.cpp',
-  'f.exe_seg1667.cpp',
-  'f.exe_seg2623.cpp',
-  'f.exe_seg35ab.cpp',
-  'f.exe_seg37ca.cpp',
-  'f.exe_seg3897.cpp',
-  'f.exe_seg48ae.cpp',
+  'cfix.exe.cpp',
+  'cfix.exe_default_seg.cpp',
+  'cfix.exe_seg000.cpp',
+  'cfix.exe_seg001.cpp',
+  'cfix.exe_seg008.cpp',
+  'cfix.exe_seg015.cpp',
   'init.cpp'
 ])
 
