--- a/src/custom/meson.build
+++ b/src/custom/meson.build
@@ -2,7 +2,8 @@ libcustom_sources = files([
   'custom.cpp',
   'segfault.cpp',
   'shadowstack.cpp',
-  'utils.cpp'
+  'utils.cpp',
+  'dumpexe.cpp'
 ])
 
 libcustom = static_library('custom', libcustom_sources,
